<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="25dp"
                android:background="@color/icons"
                android:orientation="vertical">

    <EditText
        android:id="@+id/name_text_view_edit"
        style="@style/ParseLoginUI.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:ems="10"
        android:hint="Full Name"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/username_text_view_edit"
        style="@style/ParseLoginUI.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_text_view_edit"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/college_text_view_edit"
        style="@style/ParseLoginUI.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_text_view_edit"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_school_black_24dp"
        android:ems="10"
        android:hint="@string/school"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/email_edit_text"
        style="@style/ParseLoginUI.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/college_text_view_edit"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_local_post_office_black_24dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>


    <EditText
        android:id="@+id/phone_number_edit_text"
        style="@style/ParseLoginUI.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_edit_text"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_phone_android_black_24dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>


    <EditText
        android:id="@+id/about_me_edit_text"
        style="@style/ParseLoginUI.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number_edit_text"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_face_black_24dp"
        android:ems="10"
        android:hint="@string/about_me"
        android:inputType="textMultiLine"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>


    <Button
        android:id="@+id/edit_profile_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_me_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:background="@drawable/accept_doer_button_selector"
        android:textColor="@android:color/holo_green_dark"
        />
</RelativeLayout>
